--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -21,6 +21,12 @@
                 <li class="nav-item">
                   <a class="nav-link" ng-href="/about">About</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" ng-href="/services">Services Example</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" ng-href="/directives">Directive Example</a>
+                </li>
               </ul>
             </div>
           </nav>
