--- a/wwwroot/home.html
+++ b/wwwroot/home.html
@@ -2,6 +2,7 @@
     <h1>Hi and welcome to my site</h1>
     <p>This is a demo app using AngularJS (1.7), to review the basic concepts of Angular. Please click on menu options to see the examples.</p>
     <p>CSS are based on <a href="https://getbootstrap.com" target="_blank">Twitter Bootstrap</a>, and use <a href="https://sass-lang.com/" target="_blank">SCSS</a> for custom CSS.</p>
+    <p>You can obtain a copy for source code on <a href="https://github.com/almarag/AngularExercise">GitHub</a></p>
     <div ng-controller="HomeController">
       <p class="scopeVariableExample">{{myControllerVariable}}</p>
     </div>
