--- a/wwwroot/services.html
+++ b/wwwroot/services.html
@@ -17,7 +17,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr ng-repeat="message in Messages">
+                <tr class="messageLine" ng-repeat="message in Messages">
                 <td>{{message.messageId}}</td>
                 <td>{{message.from}}</td>
                 <td>{{message.message}}</td>
