Added Todo Component with Redux

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css" />
         <link rel="stylesheet" href="../src/css/custom-styles.css" />
         <base href="/">
+        <script defer src="https://use.fontawesome.com/releases/v5.8.1/js/all.js" integrity="sha384-g5uSoOSBd7KkhAMlnQILrecXvzst9TdC09/VM+pjDTCM+1il8RHz5fKANTFFb+gQ" crossorigin="anonymous"></script>
     </head>
     <body>
         <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
@@ -27,7 +28,10 @@
                 <li class="nav-item">
                     <a class="nav-link" ng-href="/directives">Directive Example</a>
                 </li>
-              </ul>
+                <li class="nav-item">
+                  <a class="nav-link" ng-href="/redux">Components Example / Redux</a>
+                </li>
+            </ul>
             </div>
           </nav>
           <main role="main" class="container">
